2009-09-01  Christian Hergert  <chris@dronelabs.com>

	* Resources/completion.py: Watch our parent pid if it was
	  specified and kill ourself when the process has died.

	* PyBinding.Parser/PythonParserInternal.cs: Implement
	  IDisposable and notify the subprocess that we want to be
	  watched for death to enforce cleanup.

2009-09-01  Christian Hergert  <chris@dronelabs.com>

	* PyBinding.Parser/PythonParser.cs: Make sure the
	  configuration is a python configuration before we try to
	  reuse the config's IPythonRuntime. This allows non-python
	  projects with python files to still have global code
	  completion.

2009-09-01  Christian Hergert  <chris@dronelabs.com>

	* PyBinding.csproj: Add new files and header policy.

	* Makefile: 

	* PyBinding.Parser/PythonParser.cs: Add PythonResolver and
	  PythonExpressionFinder.

	* PyBinding.Parser/PythonResolver.cs: Beginnings of a simple
	  python resolver using PythonExpressionResult.

	* PyBinding.Parser/PythonExpressionFinder.cs: A simple
	  expression finder that currently looks at the current word
	  and a word backwards to determine context for the resolver.

2009-09-01  Christian Hergert  <chris@dronelabs.com>

	* PyBinding/PythonHelper.cs: Add helper to get python package
	  name.

2009-09-01  Christian Hergert  <chris@dronelabs.com>

	* PyBinding.Gui.Navigation/PackagesNodeBuilder.cs: Use the
	  proper package name

	* PyBinding.Gui.Navigation/ProjectNodeBuilderExtension.cs:
	  Just use the default ClassData builders for now.

2009-09-01  Christian Hergert  <chris@dronelabs.com>

	* PyBinding.Parser.Dom/PythonCompilationUnit.cs: Use proper
	  package name and do not add class a second time.

2009-09-01  Christian Hergert  <chris@dronelabs.com>

	* PyBinding.Gui.Navigation/PackageNodeBuilder.cs:
	* PyBinding.Gui.Navigation/PackagesNodeBuilder.cs: Use
	  "md-package" stock icon to be consistent.

2009-09-01  Christian Hergert  <chris@dronelabs.com>

	* PyBinding.Parser.Dom/PythonCompilationUnit.cs: Use